--- a/wally-web/src/main/resources/application.properties
+++ b/wally-web/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 
+server.port=8000
+
+
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/ssm?characterEncoding=UTF-8&useUnicode=true&tinyInt1isBit=false&allowMultiQueries=true&autoReconnect=true
+spring.datasource.username=root
+spring.datasource.password=
+
+
+mybatis.type-aliases-package=com.spb.wally
+mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
