--- a/wally-manager/pom.xml
+++ b/wally-manager/pom.xml
@@ -1,20 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-
+    <modelVersion>4.0.0</modelVersion>
     <parent>
-        <artifactId>wally</artifactId>
         <groupId>com.spb.wally</groupId>
+        <artifactId>wally</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
-    <artifactId>wally-service</artifactId>
+    <artifactId>wally-manager</artifactId>
+    <name>wally-manager</name>
 
     <dependencies>
         <dependency>
             <groupId>com.spb.wally</groupId>
-            <artifactId>wally-manager</artifactId>
+            <artifactId>wally-dao</artifactId>
         </dependency>
+
     </dependencies>
+
 
 </project>
