--- a/pom.xml
+++ b/pom.xml
@@ -27,10 +27,40 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
         <alibaba.druid.version>1.1.10</alibaba.druid.version>
-        <lombok.version>1.18.2</lombok.version>
+        <lombok.version>1.16.18</lombok.version>
         <mysql.version>5.1.47</mysql.version>
         <test.version>2.0.4.RELEASE</test.version>
     </properties>
+    <dependencies>
+        <!--*******************Spring Boot 起步依赖开始******************-->
+        <!--起步依赖功能：在构建文件里指定这些功能，让构建过程自己搞明白我们需要什么东西。从而降低项目依赖的复杂度-->
+        <!--起步依赖本身的版本号是由正在使用的SpringBoot的版本来决定的，而起步依赖则会决定他们引入的传递依赖的版本-->
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>1.3.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <version>${test.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-jdbc</artifactId>
+        </dependency>
+        <!--*******************起步依赖结束******************-->
+    </dependencies>
     <dependencyManagement>
         <dependencies>
             <dependency>
@@ -53,34 +83,6 @@
                 <artifactId>wally-manager</artifactId>
                 <version>${project.version}</version>
             </dependency>
-            <!--*******************Spring Boot 起步依赖开始******************-->
-            <!--起步依赖功能：在构建文件里指定这些功能，让构建过程自己搞明白我们需要什么东西。从而降低项目依赖的复杂度-->
-            <!--起步依赖本身的版本号是由正在使用的SpringBoot的版本来决定的，而起步依赖则会决定他们引入的传递依赖的版本-->
-            <dependency>
-                <groupId>org.mybatis.spring.boot</groupId>
-                <artifactId>mybatis-spring-boot-starter</artifactId>
-                <version>1.3.2</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-thymeleaf</artifactId>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-web</artifactId>
-            </dependency>
-
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-test</artifactId>
-                <version>${test.version}</version>
-                <scope>test</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-jdbc</artifactId>
-            </dependency>
-            <!--*******************起步依赖结束******************-->
             <dependency>
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
@@ -90,6 +92,11 @@
                 <groupId>mysql</groupId>
                 <artifactId>mysql-connector-java</artifactId>
                 <version>${mysql.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>druid</artifactId>
+                <version>${alibaba.druid.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
