--- a/wally-dao/pom.xml
+++ b/wally-dao/pom.xml
@@ -15,12 +15,6 @@
             <artifactId>wally-domain</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.mybatis.spring.boot</groupId>
-            <artifactId>mybatis-spring-boot-starter</artifactId>
-            <version>1.3.2</version>
-        </dependency>
-
-        <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
@@ -28,12 +22,12 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid</artifactId>
-            <version>${alibaba.druid.version}</version>
         </dependency>
     </dependencies>
 
     <build>
         <plugins>
+            <!--这是一个mybatis逆向生成工具，用于逆向生成实体-->
             <plugin>
                 <groupId>org.mybatis.generator</groupId>
                 <artifactId>mybatis-generator-maven-plugin</artifactId>
