'添加logback相关配置'

--- a/wally-web/src/main/resources/application.properties
+++ b/wally-web/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.datasource.password=
 
 mybatis.type-aliases-package=com.spb.wally
 mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
+
+#禁用模板缓存
+spring.thymeleaf.cache=false
