--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,10 @@
         <!--起步依赖功能：在构建文件里指定这些功能，让构建过程自己搞明白我们需要什么东西。从而降低项目依赖的复杂度-->
         <!--起步依赖本身的版本号是由正在使用的SpringBoot的版本来决定的，而起步依赖则会决定他们引入的传递依赖的版本-->
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
             <version>1.3.2</version>
@@ -60,6 +64,10 @@
             <artifactId>spring-boot-starter-jdbc</artifactId>
         </dependency>
         <!--*******************起步依赖结束******************-->
+        <!--<dependency>-->
+            <!--<groupId>org.springframework.boot</groupId>-->
+            <!--<artifactId>spring-boot-starter-security</artifactId>-->
+        <!--</dependency>-->
     </dependencies>
     <dependencyManagement>
         <dependencies>
