--- a/wally-web/src/main/resources/application.properties
+++ b/wally-web/src/main/resources/application.properties
@@ -13,3 +13,7 @@ mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
 
 #禁用模板缓存
 spring.thymeleaf.cache=false
+
+admin.userId=gaobh001
+
+#token.enable=false
