--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,8 @@
         <lombok.version>1.16.18</lombok.version>
         <mysql.version>5.1.47</mysql.version>
         <test.version>2.0.4.RELEASE</test.version>
+        <sign.version>1.1.3-SNAPSHOT</sign.version>
+        <redis.version>1.4.7.RELEASE</redis.version>
     </properties>
     <dependencies>
         <!--*******************Spring Boot 起步依赖开始******************-->
@@ -64,10 +66,11 @@
             <artifactId>spring-boot-starter-jdbc</artifactId>
         </dependency>
         <!--*******************起步依赖结束******************-->
-        <!--<dependency>-->
-            <!--<groupId>org.springframework.boot</groupId>-->
-            <!--<artifactId>spring-boot-starter-security</artifactId>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-redis</artifactId>
+            <version>${redis.version}</version>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
@@ -105,6 +108,11 @@
                 <groupId>com.alibaba</groupId>
                 <artifactId>druid</artifactId>
                 <version>${alibaba.druid.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.wally.sign</groupId>
+                <artifactId>sign</artifactId>
+                <version>${sign.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
