--- a/wally-domain/pom.xml
+++ b/wally-domain/pom.xml
@@ -15,5 +15,9 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.wally.sign</groupId>-->
+            <!--<artifactId>sign</artifactId>-->
+        <!--</dependency>-->
     </dependencies>
 </project>
