--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-jdbc</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
         <!--*******************起步依赖结束******************-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
