--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
         <sign.version>1.1.3-SNAPSHOT</sign.version>
         <redis.version>1.4.7.RELEASE</redis.version>
         <guava.version>18.0</guava.version>
+        <xxl-job-version>2.0.0-SNAPSHOT</xxl-job-version>
     </properties>
     <dependencies>
         <!--*******************Spring Boot 起步依赖开始******************-->
