--- a/wally-web/src/main/resources/application.properties
+++ b/wally-web/src/main/resources/application.properties
@@ -3,9 +3,9 @@ server.port=8000
 
 
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/wally?characterEncoding=UTF-8&useUnicode=true&tinyInt1isBit=false&allowMultiQueries=true&autoReconnect=true
+spring.datasource.url=jdbc:mysql://192.168.209.128:3306/wally?characterEncoding=UTF-8&useUnicode=true&tinyInt1isBit=false&allowMultiQueries=true&autoReconnect=true
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=123456
 
 
 mybatis.type-aliases-package=com.spb.wally
